# ProjetoEDARestaurante

./: 3cliente.cpp  3cliente.h  4fila.cpp  4fila.h  5mesa.h  7Menus.h  CMakeLists.txt  README.md
Main/: 1main.cpp  2estruturas.h  5mesa.cpp  6balcao.cpp  6balcao.h  7Menus.cpp  8carregarEguardar.cpp  8carregarEguardar.h
